[gd_scene load_steps=4 format=1]

[ext_resource path="res://main/theme.tres" type="Theme" id=1]
[ext_resource path="res://main/menu.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("button_start:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -264, 256 ), Vector2( 64, 256 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button_highscores:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -264, 320 ), Vector2( 64, 320 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("button_settings:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -264, 384 ), Vector2( 64, 384 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("button_about:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -264, 448 ), Vector2( 64, 448 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("button_quit:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -264, 608 ), Vector2( 64, 608 ) ]
}

[node name="menu" type="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="button_start" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -264.0
margin/top = 256.0
margin/right = -54.0
margin/bottom = 308.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "START"
flat = false

[node name="button_highscores" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -264.0
margin/top = 320.0
margin/right = -54.0
margin/bottom = 372.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "HIGHSCORES"
flat = false

[node name="button_settings" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -264.0
margin/top = 384.0
margin/right = -54.0
margin/bottom = 436.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "SETTINGS"
flat = false

[node name="button_about" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -264.0
margin/top = 448.0
margin/right = -54.0
margin/bottom = 500.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ABOUT"
flat = false

[node name="button_quit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -264.0
margin/top = 608.0
margin/right = -54.0
margin/bottom = 660.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/menu = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


